; ModuleID = '/home/carl/AnghaBench/freebsd/sys/amd64/vmm/io/extr_vioapic.c_vioapic_mmio_read.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/amd64/vmm/io/extr_vioapic.c_vioapic_mmio_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vioapic = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @vioapic_mmio_read(i8* %0, i32 %1, i32 %2, i32* %3, i32 %4, i8* %5) #0 {
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i8*, align 8
  %13 = alloca i32, align 4
  %14 = alloca %struct.vioapic*, align 8
  store i8* %0, i8** %7, align 8
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i32* %3, i32** %10, align 8
  store i32 %4, i32* %11, align 4
  store i8* %5, i8** %12, align 8
  %15 = load i8*, i8** %7, align 8
  %16 = call %struct.vioapic* @vm_ioapic(i8* %15)
  store %struct.vioapic* %16, %struct.vioapic** %14, align 8
  %17 = load %struct.vioapic*, %struct.vioapic** %14, align 8
  %18 = load i32, i32* %8, align 4
  %19 = load i32, i32* %9, align 4
  %20 = load i32*, i32** %10, align 8
  %21 = load i32, i32* %11, align 4
  %22 = call i32 @vioapic_mmio_rw(%struct.vioapic* %17, i32 %18, i32 %19, i32* %20, i32 %21, i32 1)
  store i32 %22, i32* %13, align 4
  %23 = load i32, i32* %13, align 4
  ret i32 %23
}

declare dso_local %struct.vioapic* @vm_ioapic(i8*) #1

declare dso_local i32 @vioapic_mmio_rw(%struct.vioapic*, i32, i32, i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
